--- a/src/style.css
+++ b/src/style.css
@@ -68,7 +68,6 @@ footer p {
     font-size: 16px;
     line-height: 1.5;
     opacity: 0.7;
-    margin-right: 20px;
 }
 footer ul {
     padding: 0;
@@ -90,6 +89,7 @@ footer a {
 .grid {
     display: grid;
     grid-template-columns: 1fr 2fr 2fr;
+    grid-gap: 64px;
 }
 @media (max-width: 960px) {
     header {
