--- a/src/style.css
+++ b/src/style.css
@@ -147,7 +147,7 @@ footer a {
     grid-template-columns: 1fr 2fr 2fr;
 }
 .img-responsive {
-    max-width: 100%;
+    width: 100%;
     display: block;
 }
 .text-center {
@@ -156,6 +156,13 @@ footer a {
 .card {
     background-color: white;
     margin: 30px 0;
+}
+.card-header.grid {
+    grid-gap: 0;
+}
+.embed {
+    width: 100%;
+    aspect-ratio: 1 /1;
 }
 .card-body {
     padding: 30px;
@@ -195,5 +202,11 @@ footer a {
     .grid {
         grid-template-columns: 1fr;
         grid-gap: 32px;
+    }
+    .card-header img {
+        display: none;
+    }
+    .embed {
+        aspect-ratio: 16/9;
     }
 }
